<resources>
    <string name="app_name">RestaurantPizza</string>
    <string name="store">Store</string>
    <string-array name="store_spinner">
        <item>Cihampelas</item>
        <item>Cibiru</item>
    </string-array>
    <string name="name">Your Name</string>
    <string name="store_spinner_desc">Select a store</string>

    <string name="pizza">Cocok bagi anda yang ingin merasakan pizza original dengan taburan keju dan daging asap yang lezat</string>
    <string name="spaghetti">Cocok bagi anda yang ingin merasakan spaghetti original dengan bumbu yang oriental</string>
    <string name="burger">Burger Cocok bagi anda yang ingin merasakan kelembutan burger berlapiskan keju, sayuran dan daging yang tebal</string>
    <string name="steak"> Cocok bagi anda yang ingin merasakan lezatnya daging steak dipadukan dengan kentang yang lezat</string>

    <string name="dsc_main2">Pepperoni pizza adalah pizza yang memiliki  topping daging pepperoni sapi asli. Di Italia, pepperoni disebut salame piccante (salami panas). Biasa menjadi bahan baku pizza di Amerika Serikat, yang sering mewakili 30% pelengkap. Pizza ini cocok untuk santap siang ataupun malam anda</string>

    <string name="price">Price: Rp 66.000,00</string>
    <string name="main_header">Pepperoni Pizza</string>
    <string name="greetings">Terima kasih sudah memesan ditoko kami, pesanan Pepperoni Pizza anda dikirim menggunakan Fast Delivery </string>
</resources>