<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginHorizontal="45dp">

    <ImageView
        android:id="@+id/rm_pizza"
        android:layout_width="wrap_content"
        android:layout_height="262dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="58dp"
        android:src="@drawable/rm_pizza" />

    <TextView
        android:id="@+id/store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:layout_marginTop="25dp"
        android:textColor="#733F0E"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/rm_pizza"/>

    <Spinner
        android:id="@+id/store_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_below="@id/store"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/store_spinner_desc"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="25dp"
        android:textColor="#733F0E"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/store_spinner"/>

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="Please fill your name"
        android:inputType="textPersonName"
        android:paddingStart="0dp"
        android:layout_below="@id/name"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_underline"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Submit"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.Button"/>




</RelativeLayout>