<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/main2"/>

    <TextView
        android:id="@+id/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/main_header"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main2_description" />


    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main2"
        android:layout_marginStart="220dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/price"
        android:textColor="#733F0E"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main2_description" />

    <TextView
        android:id="@+id/main2_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsc_main2"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#733F0E"
        android:layout_below="@id/price"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main2_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Order Now"
        android:textColor="#FFF"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/order"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Back"
        android:textColor="#FFF"
        android:textSize="20sp"
        style="@style/Widget.MaterialComponents.Button"/>

</RelativeLayout>
